--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorCommonBlack">#000000</color>
+    <color name="colorCommonWhite">#FFFFFF</color>
+
+    <color name="colorPrimaryBlue">#2196F3</color>
 </resources>
